--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  url_strategy: ^0.2.0
   flutter_svg: ^2.0.2 
   flutter_markdown: ^0.6.14
   cloud_firestore: ^4.4.0
