--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_analytics: ^10.1.5
 
 dev_dependencies:
+  mockito: ^5.3.2
+  build_runner: ^2.3.0
   flutter_web_optimizer: ^1.1.8
   flutter_test:
     sdk: flutter
