--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-fresh"]
 	path = themes/hugo-fresh
 	url = git@github.com:StefMa/hugo-fresh.git
+[submodule "auth-by-pay/themes/bulma"]
+	path = auth-by-pay/themes/bulma
+	url = https://github.com/jgthms/bulma.git
